# canalyst-controller

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
.claude-plugin/: marketplace.json
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml  release.yml
canalyst-plugin/: .mcp.json  README.md
canalyst-plugin/.claude-plugin/: plugin.json
canalyst-plugin/skills/canalyst/: SKILL.md
core/: conftest.py  pyinstaller_entry.py  pyproject.toml
core/canctl_core/: __init__.py  __main__.py  aggregator.py  backend.py  canalystii_backend.py  cli.py  dbc.py  mcp_server.py  mock_backend.py  multicall.py  protocol.py  recorder.py  server.py
core/tests/: test_aggregator.py  test_canalystii_backend.py  test_cli.py  test_dbc.py  test_dbc_encode.py  test_entry_dispatch.py  test_mcp_engine.py  test_mock_backend.py  test_protocol.py  test_protocol_ext.py  test_recorder.py  test_server_dbc_tx.py  test_server_ext.py  test_stdin_watcher.py
samples/: example.dbc
scripts/: build-core.md  smoke_device.py
ui/: electron-builder.yml  package-lock.json  package.json  vitest.config.js  vitest.setup.js
ui/scripts/: gen-icon.mjs
ui/src/main/: coreDaemon.js  coreDaemon.test.js  driverCheck.js  driverCheck.test.js  index.js  windowState.js  windowState.test.js
ui/src/preload/: index.js
ui/src/renderer/: index.html
ui/src/renderer/src/: App.jsx  App.test.jsx  index.css  main.jsx
ui/src/renderer/src/components/: ConnectionBar.jsx  ConnectionBar.test.jsx  DbcTxPanel.jsx  DbcTxPanel.test.jsx  RxMonitor.enhanced.test.jsx  RxMonitor.jsx  RxMonitor.scroll.test.jsx  RxMonitor.test.jsx  RxMonitor.useFrame.test.jsx  StatsPanel.jsx  StatsPanel.test.jsx  StatusBadge.jsx  StatusBadge.test.jsx  ToolsPanel.jsx  ToolsPanel.test.jsx  TxPanel.jsx  TxPanel.overwrite.test.jsx  TxPanel.prefill.test.jsx  TxPanel.rename.test.jsx  TxPanel.reorder.test.jsx  TxPanel.test.jsx
ui/src/renderer/src/hooks/: useCanSocket.js  useCanSocket.reconnect.test.jsx  useCanSocket.stats.test.jsx  useCanSocket.test.jsx  usePersistentState.js  usePersistentState.test.jsx
ui/src/renderer/src/utils/: csvExport.js  csvExport.test.js  csvExport.timestamp.test.js
