[project]
name = "canctl-core"
# 0.0.0 = 미릴리즈 dev placeholder. 실제 버전은 release 워크플로우가
# 태그(vYYYY.MM.DD)에서 빌드 시점에 주입한다(직접 커밋하지 않음).
version = "0.0.0"
description = "CANalyst-II 제어 코어: CAN 송수신 + 로컬 WebSocket 서버"
requires-python = ">=3.10"
dependencies = [
    "python-can[canalystii]>=4.3",
    "websockets>=12.0",
    "libusb-package>=1.0",
    "cantools>=39",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["canctl_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
